# advent-of-code

./: .eslintrc  .gitignore  README.md  package-lock.json  package.json
2015/: deno.json
2015/day-01/: index.ts
2015/day-02/: index.ts
2015/day-03/: index.ts
2015/day-04/: index.ts
2015/day-05/: index.ts
2015/day-06/: index.ts
2015/day-07/: index.ts  test.txt
2015/day-08/: index.ts
2015/day-09/: index.ts
2021/: .prettierrc  package-lock.json  package.json  plopfile.js  puzzle.hbs  tsconfig.json
2021/day-01/: puzzle-01.js  puzzle-02.js
2021/day-02/: puzzle-01.js  puzzle-02.js
2021/day-03/: puzzle-01.js  puzzle-02.js
2021/day-04/: input.js  puzzle-01.js  puzzle-02.js
2021/day-05/: puzzle-01.js  puzzle-02.js
2021/day-06/: puzzle-01.js  puzzle-02.js
2021/day-07/: puzzle-01.js  puzzle-02.js
2021/day-08/: puzzle-01.js  puzzle-02.js
2021/day-09/: puzzle-01.js  puzzle-02.js
2021/day-10/: puzzle-01.js  puzzle-02.js
2021/day-11/: puzzle-01.js  puzzle-02.js
2021/day-12/: puzzle-01.js  puzzle-02.js
2021/day-13/: puzzle-01.js  puzzle-02.js
2021/day-14/: puzzle-01.js  puzzle-02.js
2021/day-15/: puzzle-01.js  puzzle-02.js
2021/day-16/: index.ts  (+1 more)
2022/: deno.json
2023/: pyproject.toml
2023/common/: reader.py
2023/day01/: main.py
2023/day02/: main.py
2023/day03/: main.py
2023/day04/: main.py
2023/day05/: main.py
2023/day06/: main.py
2023/day07/: main.py
2023/day09/: main.py
2023/day10/: main.py
2023/day11/: main.py
2024/: eslint.config.ts  package-lock.json  package.json  prettier.config.mjs  tsconfig.json
(+52 files in other folders)
