[tool.poetry]
name = "2023"
version = "0.1.0"
description = ""
authors = ["Tom VanAntwerp <tom@tomvanantwerp.com>"]
packages = [
	{ include = "common" },
	{ include = "day01" },
	{ include = "day02" },
	{ include = "day03" },
	{ include = "day04" },
	{ include = "day05" },
	{ include = "day06" },
	{ include = "day07" },
	{ include = "day08" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
day01 = "day01.main:main"
day02 = "day02.main:main"
day03 = "day03.main:main"
day04 = "day04.main:main"
day05 = "day05.main:main"
day06 = "day06.main:main"
day07 = "day07.main:main"
day08 = "day08.main:main"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pyright = "^1.1.338"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
